work with reg-form

--- a/reg-form/src/App.scss
+++ b/reg-form/src/App.scss
@@ -47,7 +47,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 5px;
+  margin-top: 50px;
   position: relative;
   z-index: 99;
   .container {
@@ -70,7 +70,7 @@
     flex-direction: column;
     justify-content: center;
     height: 90%;
-    background-color: #3498db;
+    background-color: #350f36;
     width: 100%;
     position: absolute;
     right: -34%;
